Add logging. Refactor Device creation to be in the query route. Update OpenApiDoc.
